--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -18,7 +18,7 @@
 <div class="grid-row">
     <div class="column-two-thirds pull-right">
         <div class="row" ng-show="meta.searched" ng-cloak ng-class="{ transp: meta.searching }">
-            <h3 class="heading-xlarge results-list-heading">
+            <h3 class="heading-xlarge results-list-heading" tabindex="0">
                 {[{ data.total | number }]}
                 <span class="font-xsmall">
                     <ng-pluralize count="data.total"
@@ -39,8 +39,8 @@
                     Email</a> <a href="#" class="follow-list" tabindex="0"><i class="fa fa-rss" aria-hidden="true"></i>
                     RSS</a></h4>
             <div class="contents-text-block">
-                <p tabindex="0" class="sr-only">The search results below each have a summary which you may find useful
-                    in determining if the opportunity is what you’re looking for.</p>
+                <h3 tabindex="0" class="sr-only">The search results below each have a summary which you may find useful
+                    in determining if the opportunity is what you’re looking for.</h3>
             </div>
             <div class="row row-bordered" ng-show="meta.searched" ng-repeat="row in results" ng-cloak
                  ng-class="{ transp: meta.searching }">
@@ -111,7 +111,7 @@
     </div>
     <div class="column-one-third pull-left">
         <div class="filter-container">
-            <p class="font-xsmall">You can use the filters to show only results that match your interests</p>
+            <p class="font-xsmall" tabindex="0">You can use the filters to show only results that match your interests</p>
             {{ form }}
         </div>
     </div>
