EEN-192 more info for Email and RSS link

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -33,11 +33,10 @@
         </div>
 
         <div class="results-list">
-            <h4 tabindex="0" class="list-subtext">Get updates to this list <a href="#" class="follow-list"
-                                                                             tabindex="0"><i class="fa fa-envelope"
-                                                                                             aria-hidden="true"></i>
-                    Email</a> <a href="#" class="follow-list" tabindex="0"><i class="fa fa-rss" aria-hidden="true"></i>
-                    RSS</a></h4>
+            <h4 tabindex="0" class="list-subtext">Get updates to this list 
+                <a href="#" class="follow-list" tabindex="0"><i class="fa fa-envelope" aria-hidden="true"></i>Email<span tabindex="0" class="sr-only">Receive email updates on this search</span></a> 
+                <a href="#" class="follow-list" tabindex="0"><i class="fa fa-rss" aria-hidden="true"></i>RSS<span tabindex="0" class="sr-only">Receive RSS updates on this search</span></a>
+            </h4>
             <div class="contents-text-block">
                 <h3 tabindex="0" class="sr-only">The search results below each have a summary which you may find useful
                     in determining if the opportunity is what you’re looking for.</h3>
