--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -11,16 +11,16 @@
             <br />
 
             <div class="sentence-builder">
-                <p>I'm looking for <span id="keywords" class="block" contenteditable="true">Enter a keyword </span> partners
-                    <span class="dropdown empty" tabindex="0" id="search_type"><span class="chosen">to do</span>  <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                <p>I'm looking for <span id="keywords" class="block" contenteditable="true" aria-label="Enter a keyword e.g automative components">Enter a keyword</span> partners
+                    <span class="dropdown empty" tabindex="0" id="search_type" aria-label="partners to do"><span class="chosen">to do</span>  <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                     located
-                    <span class="dropdown empty" tabindex="0" id="search_country"><span class="chosen">in</span> <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                    <span class="dropdown empty" tabindex="0" id="search_country" aria-label="in"><span class="chosen">in</span> <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                 </p>
 
                 <div>
 
                     
-                    <div class="modal">
+                    <div class="modal" aria-live="assertive">
                         <div class="modal-holder">
                             {{ form }}
                         </div>
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <p><a href="/opportunities" class="button button--primary disabled js-sb-view-results sb-view-results">View Results</a>  <span tabindex="0" class="sb-results"></span></p>
+            <p class="sb-results-wrapper"><span tabindex="0" class="sb-results" aria-live="assertive"></span> <a href="/opportunities" class="button button--primary disabled js-sb-view-results sb-view-results js-spb-click">View Results</a></p>
             <p><a href="/opportunities">No thanks, let me see all opportunities</a></p>
         </div>
 
