--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/complete.html.twig
@@ -4,7 +4,7 @@
             <p class="heading-xlarge">Application complete</p>
             <p>Your reference number is</p>
             <p class="heading-large">{{ form.reference_number }}</p>
-            <p class="heading-medium">Your opportunity application has been submitted and your account created.</p>
+            <p class="heading-medium">Your opportunity application has been submitted and your account created</p>
         </div>
     </div>
     <div class="column-full">
