--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -161,8 +161,7 @@
         <div class="column-two-thirds">
             <h2 class="heading-medium">Now send your application</h2>
             <div>
-                <p>By submitting this application you are confirming that the details you are correct and that, as per
-                    the privacy policy, my personal information will not be shared.</p>
+                <p>By submitting this application I confirm that the details provided are correct and that, as per the privacy policy, my personal information will not be shared.</p>
             </div>
             <p><a href="{{ url('opportunities.eoi.complete', {'profileId': form.profile_id}) }}" class="button js-spb-click" tabindex="0" role="button">Complete your application</a></p>
         </div>
