--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -1,6 +1,6 @@
 <div class="content-heading">
-    <h1>{{ 'Partnering Opportunities'|t }}</h1>
-    <h2 tabindex="0" class="heading-large">{{ 'Find international partners'|t }}</h2>
+    <h1>{{ 'Partnering opportunities'|t }}</h1>
+    <h2 tabindex="0" class="heading-large">{{ 'Find a business to partner with, globally'|t }}</h2>
     <h3 tabindex="0">{{ 'Search for SME and academic partners to manufacture, distribute, co-develop and supply your products, ideas and business.'|t }}</h3>
 </div>
 
@@ -11,7 +11,7 @@
             <br />
 
             <div class="sentence-builder">
-                <p>I'm looking for <span id="keywords" class="block" contenteditable="true" aria-label="Enter a keyword e.g automative components">Enter a keyword</span> partners
+                <p>I'm looking for <span id="keywords" class="block" contenteditable="true" aria-label="Enter a keyword e.g. battery or engineering">Enter sector or product</span> partners
                     <span class="dropdown empty" tabindex="0" id="search_type" aria-label="partners to do"><span class="chosen">to do</span>  <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                     located
                     <span class="dropdown empty" tabindex="0" id="search_country" aria-label="in"><span class="chosen">in</span> <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
