EEN-240 accessibility fixes

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -53,7 +53,7 @@
                 {% endif %}
                 <div class="meta-data">
                     <label>{{ 'Opportunity ID:'|t }}</label>
-                    <p>{{ opportunity._id }}</p>
+                    <p tabindex="0" aria-label="{{ opportunity._id|split('')|join(' ') }}">{{ opportunity._id }}</p>
                 </div>
             </div>
         </div>
