--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -40,8 +40,8 @@
                 </form>
             </div>
             <p>
-                <a href="#" class="edit-eoi">Edit <span class="sr-only">the short description of your organisation, activities, products and services:</span></a>
-                <a href="#" class="hidden update-eoi">Update <span class="sr-only">your changes</span></a>
+                <a href="#" class="edit-eoi" tabindex="0">Edit <span class="sr-only">the short description of your organisation, activities, products and services:</span></a>
+                <a href="#" class="hidden update-eoi" tabindex="0">Update <span class="sr-only">your changes</span></a>
             </p>
         </div>
     </div>
@@ -61,8 +61,8 @@
                 </form>
             </div>
             <p>
-                <a href="#" class="edit-eoi">Edit <span class="sr-only">what interests you about this opportunity and what do you expect of that organisation?</span></a>
-                <a href="#" class="hidden update-eoi">Update <span class="sr-only">your changes</span></a>
+                <a href="#" class="edit-eoi" tabindex="0">Edit <span class="sr-only">what interests you about this opportunity and what do you expect of that organisation?</span></a>
+                <a href="#" class="hidden update-eoi" tabindex="0">Update <span class="sr-only">your changes</span></a>
             </p>
         </div>
     </div>
