EEN-238 added tab index

--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -86,7 +86,7 @@
 
     <!-- Account details -->
     <div class="column-full">
-        <h2 class="heading-medium">Your account details</h2>
+        <h2 class="heading-medium" tabindex="0">Your account details</h2>
         <hr/>
     </div>
     <div class="row">
