--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -75,7 +75,7 @@
                     <li><a href="#ipr">{{ 'Intellectual Property Rights (IPR)'|t }}</a></li>
                 </ul>
 
-                <a tabindex="0" class="button-brand" href="#express_your_interest">apply for this opportunity</a>
+                <a tabindex="0" class="button-brand" href="#express_your_interest">Contact this company</a>
             </div>
         </div>
         <div class="column-two-thirds contents-text-block">
@@ -135,7 +135,7 @@
     <div class="grid-row">
         <div class="column-one-third">
             <h3 class="heading-medium single-header-one-col"
-                id="express_your_interest" tabindex="0">{{ 'Apply for this opportunity'|t }}</h3>
+                id="express_your_interest" tabindex="0">{{ 'Contact this company'|t }}</h3>
         </div>
         <div class="column-two-thirds">
 
