--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -11,7 +11,7 @@
 
 <div class="content-heading">
     <h1 tabindex="0">{{ 'Partnering opportunities'|t }}</h1>
-    <h2 class="heading-large" tabindex="0">{{ 'Find international partners'|t }}</h2>
+    <h2 class="heading-large" tabindex="0">{{ 'Find a business to partner with, globally'|t }}</h2>
     <h3>{{ 'Search for SME and academic partners to manufacture, distribute, co-develop and supply your products, ideas and business.'|t }}</h3>
 </div>
 
